ansible/roles/minio/files/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-store
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  rules:
    - host: minio.arriaga.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-store-console
                port:
                  number: 9443
